update: onStartCommand() and onDestroy() implementation in MusicService

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NotificationTest</string>
+    <string name="notification_channel_id">CHANNEL ID</string>
+    <string name="notification_channel_name">Media Service Channel</string>
 </resources>
