--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">NotificationTest</string>
     <string name="notification_channel_id">CHANNEL ID</string>
     <string name="notification_channel_name">Media Service Channel</string>
+    <string name="start_music">Start Music</string>
+    <string name="stop_music">Stop Music</string>
 </resources>
